Fix footer submit button alignment

--- a/pattern-library/src/scss/_site.site-footer.scss
+++ b/pattern-library/src/scss/_site.site-footer.scss
@@ -82,6 +82,7 @@
   height: $upd-input-height;
   line-height: $upd-input-height;
   padding: 0;
+  vertical-align: top;
   white-space: nowrap;
   width: 30%;
 }
